--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¸ßÊıÌâ¿â</title>
+    <title>é«˜æ•°é¢˜åº“</title>
     <style>
         body {
             margin: 0;
@@ -21,25 +21,25 @@
         }
         iframe {
             width: 100%;
-            max-width: 800px; /* ÔÚµçÄÔÉÏÏŞÖÆ×î´ó¿í¶È */
-            height: 80vh; /* ¸ß¶ÈÎªÊÓ´°µÄ80% */
+            max-width: 800px; /* åœ¨ç”µè„‘ä¸Šé™åˆ¶æœ€å¤§å®½åº¦ */
+            height: 80vh; /* é«˜åº¦ä¸ºè§†çª—çš„80% */
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
-        /* Õë¶ÔÒÆ¶¯Éè±¸µÄÓÅ»¯ */
+        /* é’ˆå¯¹ç§»åŠ¨è®¾å¤‡çš„ä¼˜åŒ– */
         @media (max-width: 768px) {
             body {
                 padding: 10px;
             }
             iframe {
-                height: 85vh; /* ÔÚÊÖ»úÉÏ¸ß¶È¿ÉÒÔ¸ü¸ß */
+                height: 85vh; /* åœ¨æ‰‹æœºä¸Šé«˜åº¦å¯ä»¥æ›´é«˜ */
             }
         }
     </style>
 </head>
 <body>
-    <h1>¸ßÊıÌâ¿â</h1>
-       <iframe src="¸ßÊıÌâ¿â.pdf" frameborder="0"></iframe>
+    <h1>é«˜æ•°é¢˜åº“</h1>
+    <iframe src="é«˜æ•°é¢˜åº“.pdf" frameborder="0"></iframe>
 </body>
 </html>
