--- a/index.html
+++ b/index.html
@@ -8,47 +8,38 @@
         body {
             margin: 0;
             padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            font-family: sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            background-color: #f5f5f5;
-        }
-        .container {
-            width: 100%;
-            max-width: 900px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 20px rgba(0,0,0,0.1);
-            padding: 20px;
-            box-sizing: border-box;
+            background-color: #f4f4f4;
         }
         h1 {
             color: #333;
-            text-align: center;
             margin-bottom: 20px;
         }
-        .pdf-viewer {
+        iframe {
             width: 100%;
-            height: 80vh;
-            border: none;
+            max-width: 800px; /* 在电脑上限制最大宽度 */
+            height: 80vh; /* 高度为视窗的80% */
+            border: 1px solid #ccc;
             border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
+        /* 针对移动设备的优化 */
         @media (max-width: 768px) {
             body {
                 padding: 10px;
             }
-            .pdf-viewer {
-                height: 85vh;
+            iframe {
+                height: 85vh; /* 在手机上高度可以更高 */
             }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>math</h1>
-              <iframe class="pdf-viewer" src="math.pdf"></iframe>
-    </div>
+    <h1>math</h1>
+       <iframe src="math.pdf" frameborder="0"></iframe>
 </body>
 </html>
